# WebCraft

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build  build_clean  clean  cmake_install.cmake  start_server.py
cmake/: FindOpenGLES2.cmake
lib/glm/: glm.pc
shader/: depth.frag.glsl  depth.vert.glsl  flat.frag  flat.vert  instanced.vert.glsl  lambert.frag.glsl  lambert.vert.glsl  passthrough.vert.glsl  posteffect.frag.glsl  shader.frag  shader.vert  shadow.frag.glsl  shadow.vert.glsl  skybox.frag.glsl  staticFlat.frag.glsl  staticFlat.vert.glsl
src/: Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  Entity.cpp  Entity.h  FrameBuffer.cpp  FrameBuffer.h  MyGL.cpp  MyGL.h  Quad.cpp  Quad.h  Reticle.cpp  Reticle.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  WorldAxes.cpp  WorldAxes.h  chunk.cpp  chunk.h  glm_includes.h  main.cpp  noise.cpp  noise.h  player.cpp  player.h  smartpointerhelp.h  stb_image.h  terrain.cpp  terrain.h
web/: WebCraft.data  WebCraft.html  WebCraft.js  WebCraft.wasm  _headers  index.html
